--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "riak-bucket-cleanup",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Small node utility to delete bucket entries by using a regex.",
   "main": "./bin/riak-bucket-cleanup.js",
   "scripts": {
@@ -15,13 +15,14 @@
   "bin": {
     "riak-bucket-cleanup": "./bin/riak-bucket-cleanup.js"
   },
-  "repository" : {
-    "type" : "git",
-    "url" : "https://github.com/maurermax/riak-bucket-cleanup.git"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/maurermax/riak-bucket-cleanup.git"
   },
   "author": "Max Maurer <maxemanuel.maurer@gmail.com> (http://max-maurer.de/)",
   "license": "MIT",
   "dependencies": {
+    "async": "^0.9.0",
     "commander": "^2.3.0",
     "riak-js": "^0.10.2"
   }
