--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "riak-bucket-cleanup",
   "version": "0.0.9",
@@ -26,5 +25,10 @@
     "async": "^0.9.0",
     "commander": "^2.3.0",
     "riak-js": "^0.10.2"
+  },
+  "devDependencies": {
+    "expect.js": "^0.3.1",
+    "mocha": "^2.1.0",
+    "riak-mock-server": "^0.4.4"
   }
 }
